Cập nhật sản phẩm định kỳ

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-2xl font-bold">TÂN CHÂU CAMERA</h1>
             <nav class="space-x-4">
-                <a href="https://zalo.me/SDT_CUA_BAN" class="bg-green-500 px-4 py-2 rounded-full font-bold">Chat Zalo</a>
+                <a href="https://zalo.me/0974691799" class="bg-green-500 px-4 py-2 rounded-full font-bold">Chat Zalo</a>
             </nav>
         </div>
     </header>
@@ -19,7 +19,7 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
             
             <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-2xl transition">
-                <img class="h-48 w-full object-cover" src="assets/images/camera1.jpg" alt="Camera">
+                <img class="h-48 w-full object-cover" src="assets/images/IPC-S7XCP-6M1TED-EU.png" alt="Camera">
                 <div class="p-5">
                     <div class="text-sm text-blue-500 font-semibold uppercase">Camera Hikvision</div>
                     <h2 class="block mt-1 text-lg font-bold text-black">Camera IP 2.0MP SIÊU NÉT</h2>
@@ -28,7 +28,7 @@
                         <li>• Chống nước chuẩn IP67</li>
                         <li>• Hồng ngoại ban đêm 30m</li>
                     </ul>
-                    <a href="https://zalo.me/SDT_CUA_BAN" class="mt-4 block text-center bg-blue-600 text-white py-2 rounded-lg font-semibold">Liên hệ báo giá</a>
+                    <a href="https://zalo.me/0974691799" class="mt-4 block text-center bg-blue-600 text-white py-2 rounded-lg font-semibold">Liên hệ báo giá</a>
                 </div>
             </div>
             </div>
